Projeto_2ºAno_2ºSemestre/base.app.teacher/src/main/java/eapli/base/app/teacher/ExamGrammarParser.java
package eapli.base.app.teacher;// Generated from C:/Users/jnmte/sem4pi-22-23-45/base.app.teacher/src/main/antlr4\ExamGrammar.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, HEADER_PHRASE=35, ANSWER_PHRASE=36, COMPLETE_SPACES_PHRASE=37, 
		LETTER=38, NUMBER=39, WS=40;
	public static final int
		RULE_start = 0, RULE_feedbackRules = 1, RULE_gradeRules = 2, RULE_section = 3, 
		RULE_sectionTheme = 4, RULE_points = 5, RULE_question = 6, RULE_multipleChoiceQuestion = 7, 
		RULE_trueOrFalseQuestion = 8, RULE_directAnswerQuestion = 9, RULE_completeSpacesQuestion = 10, 
		RULE_matchingQuestion = 11, RULE_numericalQuestion = 12, RULE_questionHeader = 13, 
		RULE_answersList = 14, RULE_description = 15, RULE_optionList = 16, RULE_option = 17, 
		RULE_multipleChoiceAnswer = 18, RULE_trueOrFalseAnswer = 19, RULE_answer = 20, 
		RULE_completeSpacesQuestionHeader = 21, RULE_questionHeaderList = 22, 
		RULE_numericalAnswerRange = 23, RULE_feedbackOrRoleType = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "feedbackRules", "gradeRules", "section", "sectionTheme", "points", 
			"question", "multipleChoiceQuestion", "trueOrFalseQuestion", "directAnswerQuestion", 
			"completeSpacesQuestion", "matchingQuestion", "numericalQuestion", "questionHeader", 
			"answersList", "description", "optionList", "option", "multipleChoiceAnswer", 
			"trueOrFalseAnswer", "answer", "completeSpacesQuestionHeader", "questionHeaderList", 
			"numericalAnswerRange", "feedbackOrRoleType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'EXAM '", "':'", "'{'", "'}'", "'FEEDBACK TYPE: ('", "');'", "'GRADE TYPE: ('", 
			"'SECTION '", "' {'", "'POINTS: ('", "'MULTIPLE CHOICE '", "'V/F '", 
			"'DIRECT ANSWER '", "'COMPLETE SPACES QUESTION: '", "'MATCHING QUESTION:'", 
			"'NUMERICAL '", "';'", "' ('", "'QUESTIONS {'", "'ANSWERS {'", "'};'", 
			"'QUESTION: '", "','", "'DESCRIPTION: '", "'['", "']'", "' - '", "'-> '", 
			"'V'", "'F'", "'-'", "'none'", "'on-submission'", "'after-closing'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "HEADER_PHRASE", 
			"ANSWER_PHRASE", "COMPLETE_SPACES_PHRASE", "LETTER", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TerminalNode HEADER_PHRASE() { return getToken(ExamGrammarParser.HEADER_PHRASE, 0); }
		public FeedbackRulesContext feedbackRules() {
			return getRuleContext(FeedbackRulesContext.class,0);
		}
		public GradeRulesContext gradeRules() {
			return getRuleContext(GradeRulesContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__0);
			setState(51);
			match(HEADER_PHRASE);
			setState(52);
			match(T__1);
			setState(53);
			feedbackRules();
			setState(54);
			gradeRules();
			setState(55);
			description();
			setState(56);
			match(T__2);
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				section();
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			setState(62);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeedbackRulesContext extends ParserRuleContext {
		public FeedbackOrRoleTypeContext feedbackOrRoleType() {
			return getRuleContext(FeedbackOrRoleTypeContext.class,0);
		}
		public FeedbackRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feedbackRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterFeedbackRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitFeedbackRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitFeedbackRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeedbackRulesContext feedbackRules() throws RecognitionException {
		FeedbackRulesContext _localctx = new FeedbackRulesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_feedbackRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__4);
			setState(65);
			feedbackOrRoleType();
			setState(66);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GradeRulesContext extends ParserRuleContext {
		public FeedbackOrRoleTypeContext feedbackOrRoleType() {
			return getRuleContext(FeedbackOrRoleTypeContext.class,0);
		}
		public GradeRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gradeRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterGradeRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitGradeRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitGradeRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GradeRulesContext gradeRules() throws RecognitionException {
		GradeRulesContext _localctx = new GradeRulesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_gradeRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__6);
			setState(69);
			feedbackOrRoleType();
			setState(70);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public SectionThemeContext sectionTheme() {
			return getRuleContext(SectionThemeContext.class,0);
		}
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public List<PointsContext> points() {
			return getRuleContexts(PointsContext.class);
		}
		public PointsContext points(int i) {
			return getRuleContext(PointsContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__7);
			setState(73);
			sectionTheme();
			setState(74);
			match(T__8);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				question();
				setState(76);
				points();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 129024L) != 0) );
			setState(82);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionThemeContext extends ParserRuleContext {
		public TerminalNode HEADER_PHRASE() { return getToken(ExamGrammarParser.HEADER_PHRASE, 0); }
		public SectionThemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionTheme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterSectionTheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitSectionTheme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitSectionTheme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionThemeContext sectionTheme() throws RecognitionException {
		SectionThemeContext _localctx = new SectionThemeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sectionTheme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(HEADER_PHRASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointsContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(ExamGrammarParser.NUMBER, 0); }
		public PointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_points; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterPoints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitPoints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitPoints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointsContext points() throws RecognitionException {
		PointsContext _localctx = new PointsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_points);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__9);
			setState(87);
			match(NUMBER);
			setState(88);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public MultipleChoiceQuestionContext multipleChoiceQuestion() {
			return getRuleContext(MultipleChoiceQuestionContext.class,0);
		}
		public TrueOrFalseQuestionContext trueOrFalseQuestion() {
			return getRuleContext(TrueOrFalseQuestionContext.class,0);
		}
		public DirectAnswerQuestionContext directAnswerQuestion() {
			return getRuleContext(DirectAnswerQuestionContext.class,0);
		}
		public CompleteSpacesQuestionContext completeSpacesQuestion() {
			return getRuleContext(CompleteSpacesQuestionContext.class,0);
		}
		public MatchingQuestionContext matchingQuestion() {
			return getRuleContext(MatchingQuestionContext.class,0);
		}
		public NumericalQuestionContext numericalQuestion() {
			return getRuleContext(NumericalQuestionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_question);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(T__10);
				setState(91);
				multipleChoiceQuestion();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(T__11);
				setState(93);
				trueOrFalseQuestion();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(T__12);
				setState(95);
				directAnswerQuestion();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				match(T__13);
				setState(97);
				completeSpacesQuestion();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(T__14);
				setState(99);
				matchingQuestion();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				match(T__15);
				setState(101);
				numericalQuestion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipleChoiceQuestionContext extends ParserRuleContext {
		public QuestionHeaderContext questionHeader() {
			return getRuleContext(QuestionHeaderContext.class,0);
		}
		public OptionListContext optionList() {
			return getRuleContext(OptionListContext.class,0);
		}
		public MultipleChoiceAnswerContext multipleChoiceAnswer() {
			return getRuleContext(MultipleChoiceAnswerContext.class,0);
		}
		public MultipleChoiceQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleChoiceQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterMultipleChoiceQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitMultipleChoiceQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitMultipleChoiceQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleChoiceQuestionContext multipleChoiceQuestion() throws RecognitionException {
		MultipleChoiceQuestionContext _localctx = new MultipleChoiceQuestionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multipleChoiceQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			questionHeader();
			setState(105);
			match(T__8);
			setState(106);
			optionList();
			setState(107);
			match(T__3);
			setState(108);
			multipleChoiceAnswer();
			setState(109);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrueOrFalseQuestionContext extends ParserRuleContext {
		public QuestionHeaderContext questionHeader() {
			return getRuleContext(QuestionHeaderContext.class,0);
		}
		public TrueOrFalseAnswerContext trueOrFalseAnswer() {
			return getRuleContext(TrueOrFalseAnswerContext.class,0);
		}
		public TrueOrFalseQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trueOrFalseQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterTrueOrFalseQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitTrueOrFalseQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitTrueOrFalseQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TrueOrFalseQuestionContext trueOrFalseQuestion() throws RecognitionException {
		TrueOrFalseQuestionContext _localctx = new TrueOrFalseQuestionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_trueOrFalseQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			questionHeader();
			setState(112);
			match(T__17);
			setState(113);
			trueOrFalseAnswer();
			setState(114);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectAnswerQuestionContext extends ParserRuleContext {
		public QuestionHeaderContext questionHeader() {
			return getRuleContext(QuestionHeaderContext.class,0);
		}
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public DirectAnswerQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directAnswerQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterDirectAnswerQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitDirectAnswerQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitDirectAnswerQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectAnswerQuestionContext directAnswerQuestion() throws RecognitionException {
		DirectAnswerQuestionContext _localctx = new DirectAnswerQuestionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_directAnswerQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			questionHeader();
			setState(117);
			match(T__17);
			setState(118);
			answer();
			setState(119);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompleteSpacesQuestionContext extends ParserRuleContext {
		public CompleteSpacesQuestionHeaderContext completeSpacesQuestionHeader() {
			return getRuleContext(CompleteSpacesQuestionHeaderContext.class,0);
		}
		public AnswersListContext answersList() {
			return getRuleContext(AnswersListContext.class,0);
		}
		public CompleteSpacesQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_completeSpacesQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterCompleteSpacesQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitCompleteSpacesQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitCompleteSpacesQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompleteSpacesQuestionContext completeSpacesQuestion() throws RecognitionException {
		CompleteSpacesQuestionContext _localctx = new CompleteSpacesQuestionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_completeSpacesQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			completeSpacesQuestionHeader();
			setState(122);
			match(T__17);
			setState(123);
			answersList();
			setState(124);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingQuestionContext extends ParserRuleContext {
		public QuestionHeaderListContext questionHeaderList() {
			return getRuleContext(QuestionHeaderListContext.class,0);
		}
		public AnswersListContext answersList() {
			return getRuleContext(AnswersListContext.class,0);
		}
		public MatchingQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterMatchingQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitMatchingQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitMatchingQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingQuestionContext matchingQuestion() throws RecognitionException {
		MatchingQuestionContext _localctx = new MatchingQuestionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_matchingQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__18);
			setState(127);
			questionHeaderList();
			setState(128);
			match(T__3);
			setState(129);
			match(T__19);
			setState(130);
			answersList();
			setState(131);
			match(T__20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumericalQuestionContext extends ParserRuleContext {
		public QuestionHeaderContext questionHeader() {
			return getRuleContext(QuestionHeaderContext.class,0);
		}
		public NumericalAnswerRangeContext numericalAnswerRange() {
			return getRuleContext(NumericalAnswerRangeContext.class,0);
		}
		public NumericalQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericalQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterNumericalQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitNumericalQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor) return ((ExamGrammarVisitor<? extends T>)visitor).visitNumericalQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericalQuestionContext numericalQuestion() throws RecognitionException {
		NumericalQuestionContext _localctx = new NumericalQuestionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_numericalQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			questionHeader();
			setState(134);
			match(T__17);
			setState(135);
			numericalAnswerRange();
			setState(136);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
